# networking-s0012E

./: .gitignore
projects/client/: CMakeLists.txt  proto.fbs
projects/client/code/: main.cc  spacegameapp.cc  spaceship.cc
projects/server/: CMakeLists.txt
projects/server/code/: main.cc  spacegameapp.cc  spaceship.h
